--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "desktop": "react-native run-macos",
     "ios:device": "export NODE_OPTIONS=--openssl-legacy-provider && react-native run-ios --device",
     "ios:device:release": "export NODE_OPTIONS=--openssl-legacy-provider && react-native run-ios --configuration Release --device",
-    "start": "export NODE_OPTIONS=--openssl-legacy-provider && react-native start",
+    "start": "export NODE_OPTIONS='--openssl-legacy-provider --max-old-space-size=8192' && react-native start",
     "test:coverage": "jest --coverage --testMatch='**/*.spec.{js,tsx}' --config='jest.config.js'",
     "test:unit": "jest --watch --testMatch='**/*.spec.{js,tsx}' --config='jest.config.js'",
     "prebuild:android:debug": "yarn set:dev",
@@ -132,7 +132,6 @@
     "react-native-quick-actions": "0.3.13",
     "react-native-randombytes": "3.6.1",
     "react-native-rate": "1.2.12",
-    "react-native-reanimated": "3.0.2",
     "react-native-restart": "0.0.27",
     "react-native-rounded-checkbox": "0.3.3",
     "react-native-safe-area-context": "4.5.0",
